<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">whappened</string>
    <string name="action_settings">Settings</string>
    <string name="appName">whappened</string>
    <string name="peng_desc">A photo of a baby penguin</string>
    <string name="app_desc">A lifelogger app in which a user can record their favorite activities and view others\' fun activities near them!</string>
    <string name="new_user">New User</string>
    <string name="new_event">New Event</string>
    <string name="first_name_field_hint">First Name</string>
    <string name="last_name_field_hint">Last Name</string>
    <string name="email_address_field_hint">Email Address</string>
    <string name="password_field_hint">Password</string>
    <string name="password_confirm_field_hint">Confirm Password</string>
    <string name="new_user_prompt">Enter your information below to create your very own whappened account!</string>
    <string name="new_user_confirm">Create Account</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="location_label">Current: Lat:</string>
    <string name="current_location">Lon:</string>
    <string name="comment_label">Your Comment\:</string>
    <string name="recommended">Recommended\!</string>
    <string name="would_not_recommend">Wouldn\'t Recommend</string>
    <string name="comment_field_hint">What Happened\?</string>
    <string name="title_activity_display_user_info">DisplayUserInfoActivity</string>
    <string name="check_user">Check User</string>
    <string name="password_mismatch">Enter your information below to create your very own whappened account! \n Your Passwords didn\'t match; please try again.</string>
    <string name="review_user">Please review your user info.</string>
    <string name="title_activity_view_events">ViewEvents</string>
    <string name="hello_world">Hello world!</string>
    <string name="view_events">View Events</string>
    <string name="title_activity_about_whappened">AboutWhappened</string>
	<string name="action_about">About</string>
	<string name="user_info">User Info</string>
	<string name="GOOGLE_MAPS_API_KEY">AIzaSyClDfsZ8rFGkoY7Hmof5t1GL9e9gMt6u-U</string>
</resources>
