<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/new_user_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_user_prompt"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
        
    <EditText
        android:id="@+id/first_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:hint="@string/first_name_field_hint" />

    <EditText
        android:id="@+id/last_name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/last_name_field_hint" />

    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address_field_hint" />

    <EditText
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_field_hint" />

    <EditText
        android:id="@+id/password_confirm_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_confirm_field_hint" />

    <ImageButton
        android:id="@+id/new_user_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="createNewUser"
        android:contentDescription="@string/new_user_confirm"
        android:src="@drawable/buttons_create_account" />
	<!-- 
    <Button
        android:id="@+id/new_user_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:drawable/btn_default"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="createNewUser"
        android:text="@string/new_user_confirm" />
	 -->
</LinearLayout>