<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    	
	    <ImageButton
	        android:id="@+id/new_user"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:contentDescription="@string/new_user"
	        android:onClick="onNU_Click"
	        android:src="@drawable/button_new_user" />

	    <ImageButton
	        android:id="@+id/new_event"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:contentDescription="@string/new_event"
	        android:onClick="onNE_Click"
	        android:src="@drawable/button_what_happened" />

	    <ImageButton
	        android:id="@+id/view_event"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:contentDescription="@string/view_events"
	        android:onClick="onVE_Click"
	        android:src="@drawable/button_whats_happening" />

		<!--
		<Button
		    android:id="@+id/confirm_user_info"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:background="@android:drawable/btn_default"
		    android:onClick="onUC_Click"
		    android:text="@string/check_user" />
		-->
	

</LinearLayout>
