<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:gravity="left"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewEventActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top" >

        <TextView
            android:id="@+id/location_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_weight="0.39"
            android:text="@string/location_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/primary_text_light" />

        <TextView
            android:id="@+id/txtLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/current_location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.39"
            android:text="@string/current_location"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/user_event_photo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.39"
            android:src="@drawable/ic_launcher" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="TakeEventPhoto"
            android:src="@drawable/take_a_photo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        android:gravity="top"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/event_comment_editText"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_gravity="fill_vertical"
            android:ems="10"
            android:hint="@string/comment_field_hint" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        
        android:gravity="bottom"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/recommended_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/recommended"
            android:onClick="recSelect"
            android:src="@drawable/buttons_recommend" />

        <ImageButton
            android:id="@+id/not_recommended_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/would_not_recommend"
            android:onClick="negRecSelect"
            android:src="@drawable/buttons_wouldnt_recommend" />
		<!-- 
        <Button
            android:id="@+id/recommended_button"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="recSelect"
            android:text="@string/recommended" />

        <Button
            android:id="@+id/not_recommended_button"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="negRecSelect"
            android:text="@string/would_not_recommend" />
         -->
    </LinearLayout>

</LinearLayout>
